Fix IE7 demos - example lower z-index than code TabStrip.

--- a/demos/mvc/content/shared/styles/examples.css
+++ b/demos/mvc/content/shared/styles/examples.css
@@ -1024,6 +1024,11 @@ p#copy
     min-height:200px;
 }
 
+*+html #example
+{
+    z-index: 2;
+}
+
 .widgetOverview #example
 {
     padding-left:0;
